not_in_use/jellyfin/flaresolverr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaresolverr
spec:
  selector:
    matchLabels:
      app: flaresolverr
  template:
    metadata:
      labels:
        app: flaresolverr
    spec:
      containers:
        - name: flaresolverr
          image: ghcr.io/flaresolverr/flaresolverr:v3.3.21
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "1Gi"
              cpu: "1"
          ports:
            - containerPort: 8191
              name: http
              protocol: TCP
            - containerPort: 2112
---
apiVersion: v1
kind: Service
metadata:
  name: flaresolverr
  namespace: entertainment
  labels:
    app: flaresolverr
spec:
  selector:
    app: flaresolverr
  ports:
    - port: 8191
      targetPort: 8191
      name: http
      protocol: TCP
    - port: 2112
      targetPort: 2112
      name: metrics
      protocol: TCP
  type: ClusterIP
