not_in_use/jellyfin/jellyseerr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr
  namespace: jellyfin
  labels:
    app.kubernetes.io/name: jellyseerr
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: jellyseerr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jellyseerr
    spec:
      containers:
        - name: jellyseerr
          image: fallenbagel/jellyseerr:latest
          ports:
            - containerPort: 5055
              name: http
          volumeMounts:
            - name: config
              mountPath: /app/config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyseerr-config
---
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
  namespace: jellyfin
  labels:
    app.kubernetes.io/name: jellyseerr
spec:
  ports:
    - port: 5055
      targetPort: http
      name: http
  selector:
    app.kubernetes.io/name: jellyseerr
