not_in_use/jellyfin/kavita.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kavita
  labels:
    app.kubernetes.io/name: kavita
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: kavita
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kavita
    spec:
      containers:
        - name: kavita
          image: jvmilazz0/kavita:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
          volumeMounts:
            - name: kavita-config
              mountPath: /kavita/config
            - name: media
              mountPath: /library

      volumes:
        - name: kavita-config
          persistentVolumeClaim:
            claimName: kavita-config
        - name: media
          persistentVolumeClaim:
            claimName: media
---
apiVersion: v1
kind: Service
metadata:
  name: kavita
  namespace: default
  labels:
    app.kubernetes.io/name: kavita
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 5000
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: kavita
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kavita
  namespace: jellyfin
  labels:
    app: kavita
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-redirect-from: /
    nginx.ingress.kubernetes.io/proxy-redirect-to: /
spec:
  ingressClassName: nginx
  rules:
    - host: "kavita.homelab"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kavita
                port:
                  number: 5000
