not_in_use/jellyfin/readarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: readarr
  namespace: jellyfin
  labels:
    app.kubernetes.io/name: readarr
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8787
      targetPort: 8787
  selector:
    app.kubernetes.io/name: readarr
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: readarr
  namespace: jellyfin
  labels:
    app.kubernetes.io/name: readarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: readarr
  strategy:
    type: Recreate
  revisionHistoryLimit: 1
  template:
    metadata:
      namespace: media
      labels:
        app.kubernetes.io/name: readarr
    spec:
      restartPolicy: Always
      containers:
        - name: readarr
          image: ghcr.io/hotio/readarr:testing-0.4.7.2718
          resources:
            requests:
              memory: 500Mi
              cpu: 500m
            limits:
              memory: 1000Mi
              cpu: 1000m
          ports:
            - containerPort: 8787
          volumeMounts:
            - name: readarr-config
              mountPath: /config
            - name: media
              mountPath: /data
      volumes:
        - name: readarr-config
          persistentVolumeClaim:
            claimName: readarr-config
        - name: media
          persistentVolumeClaim:
            claimName: media
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: readarr
  namespace: jellyfin
  labels:
    app: readarr
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-redirect-from: /
    nginx.ingress.kubernetes.io/proxy-redirect-to: /
spec:
  ingressClassName: nginx
  rules:
    - host: "readarr.homelab"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: readarr
                port:
                  number: 8787
